--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,9 @@
     tools:context="com.korbinian.oneplus3t_oreo.k_tracking.MainActivity">
 
     <TextView
-        android:id="@+id/date"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:gravity="right"
-        android:text="" />
-
-    <TextView
         android:id="@+id/textusedData"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:text="@string/usedData" />
 
@@ -36,25 +27,19 @@
         android:text=" "
         android:textAlignment="center" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:gravity="center"
-        android:text="----------------" />
-
     <Button
         android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/buttonCalc"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        tools:layout_marginVertical="20dp" />
 
     <TextView
         android:id="@+id/expectedData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="30dp"
+        android:layout_marginVertical="10dp"
         android:gravity="center"
         android:text=""
         android:textSize="18sp"
@@ -64,7 +49,7 @@
         android:id="@+id/resDataPDay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="30dp"
+        android:layout_marginVertical="10dp"
         android:gravity="center"
         android:text=""
         android:textSize="18sp"
@@ -74,7 +59,7 @@
         android:id="@+id/dailyAverage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="30dp"
+        android:layout_marginVertical="10dp"
         android:gravity="center"
         android:text=""
         android:textSize="18sp"
@@ -84,7 +69,7 @@
         android:id="@+id/nominalUsed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="30dp"
+        android:layout_marginVertical="10dp"
         android:gravity="center"
         android:text=""
         android:textSize="18sp"
